FInished with footer and checking alignment.

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
                     
                 </div>
                 <div class="bnr_title">
-                    <p>“Lets create an environment in which knowledge about coffee and its sphere can be obtained”</p>
+                    <p>“To create an environment in which knowledge about coffee and its sphere can be obtained”</p>
                     <ul class="social_media">
                         <li><a href="twitter.com"><img src="img/Twitter.jpg"/></a></li>
                         <li><a href="facebook.com"><img src="img/Facebook.jpg"/></a></li>
@@ -119,7 +119,7 @@
                     </div>
                     <div class="topic_2">
                         <h2>Next Event</h2>
-                        <p>Nordic Barista Cup 2011</br>Copenhagen, Denmark</br>Dates : 25th - 27th August 2011</br>Theme : SENSORY</p>
+                        <p>NORDIC BARISTA CUP 2011</br>Copenhagen, Denmark</br>Dates : 25th - 27th August 2011</br>Theme : SENSORY</p>
                         <a href="">Sign up now.</a>
                     </div>
                     <div class="topic_3">
@@ -175,9 +175,8 @@
             <footer>
                 <div class="left_part">
                     <h2>About Nordic Barista Cup</h2>
-                    <p>The vision within the Nordic Barista Cup is:
-                    <blockquote>"To create an environment in which knowledge about coffee and its sphere can be obtained"</blockquote>
-                    ...create an environment…’<br>Combined with personally absorption having the opportunity to see and experience countries, people, traditions etc. will always serve as a source of inspiration in our daily work.
+                    <p>The vision within the Nordic Barista Cup is:</p><blockquote>"To create an environment in which knowledge about coffee and its sphere can be obtained"</blockquote>
+                    <p>...create an environment…’<br>Combined with personally absorption having the opportunity to see and experience countries, people, traditions etc. will always serve as a source of inspiration in our daily work.
 The organization behind the Nordic Barista Cup see it as its main purpose to be a part of creating this forum in which people can meet, bond and achieve further knowledge.
                     </p>
                 </div>
@@ -199,11 +198,11 @@ The organization behind the Nordic Barista Cup see it as its main purpose to be 
                     <h2>Contact</h2>
                     <h4>Nordia Barista Cup</h4>
                     <address>
-                        Amagertorv 13</br>
-                        1160 Copenhagen K<br>
-                        <a href="tel:+4533120428">+4533120428</a><br>
-                        CVR: 11427693<br>
-                        Email:<a href="mailto:bbrend@nordicbaristacup.com">bbrend@nordicbaristacup.com</a>
+                        <p>Amagertorv 13</p>
+                        <p>1160 Copenhagen K</p>
+                        <a href="tel:+4533120428">+4533120428</a>
+                        <p>CVR: 11427693</p>
+                    <span>Email:</span><a href="mailto:bbrend@nordicbaristacup.com">bbrend@nordicbaristacup.com</a></p>
                     </address>
                     <ul class="social_media">
                         <li><a href="twitter.com"><img src="img/Twitter.jpg"/></a></li>
