--- a/src/index.html
+++ b/src/index.html
@@ -107,6 +107,7 @@
                         <li><a href="">2</a></li>
                         <li><a href="">3</a></li>
                         <li><a href=""><img src="img/next.jpg" alt="next"/></a></li>
+                        <div class="clr"></div>
                     </ul>
                 <div class="clr"></div>
                 </div>
